--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   supabase_flutter: ^2.6.0
   flutter_dotenv: ^5.1.0
+  go_router: ^14.2.7
 
 dev_dependencies:
   flutter_test:
