--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   supabase_flutter: ^2.6.0
   flutter_dotenv: ^5.1.0
   go_router: ^14.2.7
+  provider: ^6.1.2
+
 
 dev_dependencies:
   flutter_test:
