--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_dotenv: ^5.1.0
   go_router: ^14.2.7
   provider: ^6.1.2
+  google_fonts: ^6.2.1
+  intl: ^0.19.0
 
 
 dev_dependencies:
@@ -67,6 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - .env
+    - assets/images/habit_sync_logo.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
